[package]
name = "toolwall-audit"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3"
toolwall-core = { path = "../toolwall-core" }
toolwall-redact = { path = "../toolwall-redact" }

[dev-dependencies]
assert_fs = "1.0"
