[package]
name = "toolwall-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
time = { version = "0.3", features = ["macros", "serde"] }
sha2 = "0.10"
blake3 = "1.4"


